
---------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.2 (2017-07-26) -
---------------------------------------------------

MAJOR UPDATES

  o Design of reports was edited.
  o Several bugs were fixed:
     - Bug when creating report for uploaded data was  fixed.
     - Bug when creating report for data without predictive
       criterion or DIF group was fixed.

MINOR UPDATES

  o Design and options of Report page were updated.
  o Layout of IRT curves training page was mildly changed.


---------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.1 (2017-07-16) -
---------------------------------------------------

MAJOR UPDATES

  o Several bugs were fixed:
     - Interpretation of regression models was fixed.
     - Interpretation of text about correlation in Predictive validity
       was fixed.
  o ShinyItemAnalysis now used also 'data.table' package.
  o Data page was divided into two subpages to avoid long rendering
    of tables.
    when changing datasets.
  o Function 'gDiscrim' to calculate generalized discrimination was
    implemented.
  o Function 'DDplot' was edited to be able to handle generalized
    discrimination.
    Double slider was added into 'Traditional analysis page'.
  o Traditional analysis table was extended by adding column
    with generalized
    discrimination. This is done also in reports.
  o Some pages has now their own source code files:
     - 'Summary' - Summary.R
     - 'Validity'- Validity.R
     - 'Traditional analysis' - TraditionalAnalysis.R
     - 'Regression' - Regression.R
     - 'IRT models' - IRT.R
     - 'DIF/Fairness' - DIF.IRT

MINOR UPDATES

  o Last three rows in regression comparison table are now bold.
  o Reference list was extended.
  o The subpage 'Distractors' of 'Item analysis' page was mildly edited.
  o Generalized DD plot was removed from 'Distractor' subpage. It is now
    available on 'Traditional item analysis' subpage.