@@ -26,6 +26,7 @@ Imports:
     moments,
     msm,
     nnet,
+    plotly,
     psych,
     psychometric,
     reshape2,
