@@ -19,6 +19,7 @@ require(mirt)
 require(moments)
 require(msm)
 require(nnet)
+require(plotly)
 require(psych)
 require(psychometric)
 require(reshape2)
